# verita

./: .gitignore  Cargo.toml  Justfile  README.md  ca.crt  ca.key  ca.srl  perf.data
backend/: Cargo.toml  server.crt  server.csr  server.key
backend/src/: main.rs  server.rs
frontend/: package.json
frontend/src/: app.css  app.html
frontend/src-tauri/: Cargo.toml  client-cert.pem  client-key.pem  client.crt  client.csr  client_pkcs8.pem  tauri.conf.json
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/login/: mod.rs
frontend/src-tauri/src/verita/: client.rs
frontend/src/routes/: +page.svelte
specs/: protocol.capnp  protocol.md
verita/: package.json
verita/src-tauri/: Cargo.toml
verita/src-tauri/src/: main.rs
verita_protocol/: Cargo.toml  build.rs
verita_protocol/src/: lib.rs
verita_protocol/src/auth/: mod.rs
verita_protocol_lib/: Cargo.toml
verita_protocol_lib/src/: lib.rs
verita_protocol_lib/src/auth/: mod.rs
verita_protocol_lib/src/client/: mod.rs
verita_protocol_lib/src/service/: error.rs  mod.rs
verita_protocol_lib/src/sync/: pipe.rs
verita_protocol_macros/: Cargo.toml
verita_protocol_macros/src/: lib.rs
