[package]
name = "verita"
version = "0.1.0"
edition = "2024"
[workspace]

members = [
    "backend",
    "frontend/src-tauri",
    "verita_protocol_lib", "verita_protocol_macros",
]
resolver = "2"

[workspace.dependencies]
color-eyre = "0.6.5"
quinn = "0.11.9"
tokio = { version = "1.49.0", features = ["full"] }
dotenv = "0.15.0"
tracing = "0.1.44"
futures = "0.3.31"
rustls = {version = "0.23.36", features=["ring"]}
rustls-pemfile = "2.2.0"
bytes = "1.11.1"
flume = "0.12.0"
verita_protocol_lib = {path="verita_protocol_lib"}
tokio-util = "0.7.18"
rkyv = "0.8.14"
async-trait = "0.1.89"
