[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = {workspace = true}
tokio = {workspace = true}
dotenv = {workspace = true}
color-eyre = {workspace = true}
tracing = {workspace = true}
futures = {workspace = true}
rustls = {workspace = true}
rustls-pemfile = {workspace=true}
verita_protocol_lib = {path="../verita_protocol_lib"}
bytes = {workspace = true}
rkyv = {workspace = true}
async-trait = {workspace = true}
