[package]
name = "verita_protocol_lib"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "verita_protocol_lib"
crate-type = ["staticlib", "rlib"]

[dependencies]
tokio = {workspace = true}
capnp = {workspace=true}
paste = "1.0.15"
rust-argon2 = "3.0"
rand = "0.9.2"
flume = {workspace=true}
bytes = {workspace=true}
rustls = {workspace = true}
rustls-pemfile = {workspace=true}
quinn = {workspace = true}
color-eyre = {workspace = true}

[build-dependencies]
capnpc = {workspace=true}


